[package]
name = "amqpr"
version = "0.2.2"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A tokio based amqp api library mainly used by amqpr."
repository = "https://github.com/AtsukiTak/amqpr"
keywords = ["amqp", "rabbitmq"]
categories = ["network-programming", "encoding"]

[dependencies]
tokio-core = "0.1"
futures = "0.1"
ex-futures = "0.4"
bytes = "0.4"
log = "0.3"
amqpr-codec = "0.2"
amqpr-api = "0.3"

[dev-dependencies]
clap = "2.26"
rand = "0.3"
log4rs = "0.7"
